INDIGO-484: Create New Auto Attendant - Modal Alignment Fix

--- a/app/modules/huron/features/newFeature/_new-feature.scss
+++ b/app/modules/huron/features/newFeature/_new-feature.scss
@@ -43,7 +43,9 @@
       position: relative;
       top: rem-calc(46);
       left: 50%;
-    }
+    }&.no-line {
+       padding-top: 1rem;
+     }
   }
   .icon {
     font-size: 24px;
